--- a/paginaDoUsuário.html
+++ b/paginaDoUsuário.html
@@ -8,10 +8,9 @@
 <body>
     <header>
         <div >
-            <div style="display: flex; gap: 10px;">
-                <button >POSTAR</button>
-                <button >PESQUISA</button>
-                <button >MEUS POSTS</button>
+            <div class="nav-bar">
+                <div class="nav-item"><a href="paginaPost.html"><button >POSTAR</button></a></div>
+                <div class="nav-item"><a href="paginapesquisa.html"><button >PESQUISA</button></a></div>
             </div>
             <input type="text" placeholder="Pesquisar" >
             <button >LOGIN</button>
