--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="nav-bar">
             <div class="nav-item"><a href="Menu"><button >Menu</button></a></div>
             <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>Receitas</button></a></div>
+            <a href="paginaDoUsuário.html"><img src="/assets/username" alt="Usuario"></a>
             <div class="nav-item"><a href="login.html"><button>Registrar/Login In</button></a></div>
             <form class="search-nav">
                 <input type="text" id="search-nav" placeholder="Pesquisar">
