Ajustado o Layout padrao e Header

--- a/pagina_receita_eduardo.html
+++ b/pagina_receita_eduardo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,31 +7,24 @@
 </head>
 <body>
     <header>
-        <section class="nav-topo">
-            <img src="/assets/facebook_5968764.png" alt="Icone Facebook">
-            <img src="/assets/whatsapp_733585 (1).png" alt="Icone Whatsapp">
-        </section>
-        <section>
-            <nav>
-                <a href="#Portal">Portal</a>
-                <a href="#Fórum">Fórum</a>
-                <a href="#Membros">Membros</a>
-                <form class="search-nav">
-                    <input type="text" id="search-nav" placeholder="Pesquisar">
-                    <a href="#"><img src class="search-icon" src="" alt=""></a>
-                </form>
-                <a href="#Login In">Login In</a>
-                <a href="#Registrar">Registrar</a>
-            </nav>
-        </section>
+        <header>
+            <div >
+                <div class="nav-bar">
+                    <div class="nav-item"><a href="paginaPost.html"><button >POSTAR</button></a></div>
+                    <div class="nav-item"><a href="paginapesquisa.html"><button >PESQUISA</button></a></div>
+                </div>
+                <input type="text" placeholder="Pesquisar" >
+                <div class="nav-item"><a href="paginaLogin.html"><button >LOGIN</button></a></div>
+            </div>
+        </header>
+
+
+
+
+
         <main>
             <img src="assets\tacaca.png" alt="">
-            <section class="Button">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>Pesquisar</button>
-            </section>
+            
         </main>
 
 
