--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
             <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>Receitas</button></a></div>
             <a href="paginaDoUsuário.html"><img src="/assets/username" alt="Usuario"></a>
             <div class="nav-item"><a href="login.html"><button>Registrar/Login In</button></a></div>
+            
+            
             <form class="search-nav">
                 <input type="text" id="search-nav" placeholder="Pesquisar">
-                <a href="#"><img src class="search-icon" src="" alt=""></a>
             </form>
+            <a href="paginapesquisa.html"><button>Buscar Receita</button></a>
         </div>
     </header>
     <main>
@@ -37,9 +39,9 @@
     </main>
     <footer>
         <span>Top Receitas</span>
-        <a href="pagina_receita_eduardo.html"><img src="Tacaca" alt="Receita tacaca"></a>
-        <a href=""><img src="" alt=""></a>
-        <a href=""><img src="" alt=""></a>
+        <a href="pagina_receita_eduardo.html"><img src="" alt="Receita tacaca"></a>
+        <a href=""><img src="" alt="Torta Doce"></a>
+        <a href=""><img src="" alt="Feijoada"></a>
     </footer>
 </body>
 </html>
