--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 
         <div>
             <input type="checkbox">
-            <p>Lmebrar-me</p>
+            <p>Lembrar-me</p>
         </div>
 
         <button>Entrar</button>
