Adicao de formatacao textos

--- a/padraoPagina.html
+++ b/padraoPagina.html
@@ -13,7 +13,7 @@
                 <div class="nav-item"><a href="paginapesquisa.html"><button >PESQUISA</button></a></div>
             </div>
             <input type="text" placeholder="Pesquisar" >
-            <div class="nav-item"><a href="paginaLogin.html"><button >LOGIN</button></a></div>
+            <div class="nav-item"><a href="login.html"><button >LOGIN</button></a></div>
         </div>
     </header>
 
