--- a/paginapesquisa.html
+++ b/paginapesquisa.html
@@ -45,6 +45,12 @@
     <footer>
         <span>Top Receitas</span>
         <a href="pagina_receita_eduardo.html"><img src="Tacaca" alt="Receita tacaca"></a>
+            <span>Contato</span>
+            <ul>
+                <li><a href=”facebook.com/meublog”>Facebook</a></li>
+                <li><a href=”instagram.com/meublog”>Instagram</a></li>
+                <li><a href=”twitter.com/meublog”>Twitter></a></li>
+            </ul>
     </footer>
 </body>
 </html>
