--- a/paginaDoUsuário.html
+++ b/paginaDoUsuário.html
@@ -81,5 +81,13 @@
             </div>
         </div>
     </section>
+      <footer>
+            <span>Contato</span>
+            <ul>
+                <li><a href=”facebook.com/meublog”>Facebook</a></li>
+                <li><a href=”instagram.com/meublog”>Instagram</a></li>
+                <li><a href=”twitter.com/meublog”>Twitter></a></li>
+            </ul>
+        </footer>
 </body>
 </html>
