--- a/paginapesquisa.html
+++ b/paginapesquisa.html
@@ -39,7 +39,7 @@
         <p>Torta Doce</p>
         <img src="/assets/acaraje3.png" alt="Imagem-acajare">
         <p>Mini acajare na airfyer</p>
-        <img src=/assets/Feijoada3.png".png" alt="Imagem-feijoada">
+        <img src="/assets/Feijoada3.png" alt="Imagem-feijoada">
         <p>Feijoada tradicional</p>
     </div>
     <footer>
