--- a/index.html
+++ b/index.html
@@ -32,12 +32,20 @@
                 <img src="" alt="Acaraje">
             </div>
         </section>
-    </main>
-    <footer>
+    <section-bottom>
         <span>Top Receitas</span>
         <a href="pagina_receita_eduardo.html"><img src="" alt="Receita tacaca"></a>
         <a href=""><img src="" alt="Torta Doce"></a>
         <a href=""><img src="" alt="Feijoada"></a>
+    </section-bottom>
+    </main>
+    <footer>
+        <span>Contato</span>
+        <ul>
+            <li><a href=”facebook.com/meublog”>Facebook</a></li>
+            <li><a href=”instagram.com/meublog”>Instagram</a></li>
+            <li><a href=”twitter.com/meublog”>Twitter></a></li>
+        </ul>
     </footer>
 </body>
 </html>
