--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
             <div class="nav-item"><a href="paginapesquisa.html"><button >PESQUISA</button></a></div>
         </div>
+
         <input type="text" placeholder="Pesquisar" >
         <button >LOGIN</button>
-        </div>
+
     </header>
 
     <main>
@@ -47,7 +48,7 @@
         <ul>
             <li><a href=”facebook.com/meublog”>Facebook</a></li>
             <li><a href=”instagram.com/meublog”>Instagram</a></li>
-            <li><a href=”twitter.com/meublog”>Twitter></a></li>
+            <li><a href=”twitter.com/meublog”>Twitter</a></li>
         </ul>
     </footer>
 
