--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>Login/Registro</title>
 </head>
 <body>
-    
+
     <header>
         <div class="nav-topo">
             <img src="/assets/facebook_5968764.png" alt="Icone Facebook">
@@ -44,12 +44,14 @@
             </p>
         </form>
         </section>
+
         <section-bottom>
             <span>Top Receitas</span>
             <a href="pagina_receita_eduardo.html"><img src="" alt="Receita tacaca"></a>
             <a href=""><img src="" alt="Torta Doce"></a>
             <a href=""><img src="" alt="Feijoada"></a>
         </section-bottom>
+
     </main>
     
     <footer>
@@ -57,8 +59,9 @@
         <ul>
             <li><a href=”facebook.com/meublog”>Facebook</a></li>
             <li><a href=”instagram.com/meublog”>Instagram</a></li>
-            <li><a href=”twitter.com/meublog”>Twitter></a></li>
+            <li><a href=”twitter.com/meublog”>Twitter</a></li>
         </ul>
     </footer>
+
 </body>
 </html>
