--- a/paginapesquisa.html
+++ b/paginapesquisa.html
@@ -12,10 +12,13 @@
             <img src="/assets/whatsapp_733585 (1).png" alt="Icone Whatsapp">
         </div>
         <div class="nav-bar">
-            <div class="nav-item"><a href="Menu"><button >Menu</button></a></div>
-            <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>Receitas</button></a></div>
+            <div class="nav-item"><a href="Menu"><button >MENU</button></a></div>
+            <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
             <a href="paginaDoUsuário.html"><img src="/assets/username" alt="Usuario"></a>
-            <div class="nav-item"><a href="login.html"><button>Registrar/Login In</button></a></div>
+
+            <input type="text" placeholder="Pesquisar" >
+            <button >LOGIN</button>
+
             <form class="search-nav">
                 <input type="text" id="search-nav" placeholder="TACACÁ">
                 <a href="#"><img src class="search-icon" src="" alt=""></a>
