--- a/paginapesquisa.html
+++ b/paginapesquisa.html
@@ -49,12 +49,16 @@
             <img src="/assets/Feijoada3.png" alt="Imagem-feijoada">
             <p>Feijoada tradicional</p>
         </div>
+
+        <section-bottom>
+            <span>Top Receitas</span>
+            <a href="pagina_receita_eduardo.html"><img src="" alt="Receita tacaca"></a>
+            <a href=""><img src="" alt="Torta Doce"></a>
+            <a href=""><img src="" alt="Feijoada"></a>
+        </section-bottom>
     </main>
 
     <footer>
-        <span>Top Receitas</span>
-        <a href="pagina_receita_eduardo.html"><img src="Tacaca" alt="Receita tacaca"></a>
-            <span>Contato</span>
             <ul>
                 <li><a href=”facebook.com/meublog”>Facebook</a></li>
                 <li><a href=”instagram.com/meublog”>Instagram</a></li>
