--- a/paginaDoUsuário.html
+++ b/paginaDoUsuário.html
@@ -7,13 +7,15 @@
 </head>
 <body>
     <header>
-        <div >
-            <div class="nav-bar">
-                <div class="nav-item"><a href="paginaPost.html"><button >POSTAR</button></a></div>
-                <div class="nav-item"><a href="paginapesquisa.html"><button >PESQUISA</button></a></div>
-            </div>
-            <input type="text" placeholder="Pesquisar" >
+        <div class="nav-bar">
+            <div class="nav-item"><a href="Menu"><button>MENU</button></a></div>
+            <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
             <button >LOGIN</button>
+        </div>
+        
+        <div class="pesquisa">
+            <input type="text" placeholder="Pesquisar" >
+            <button>BUSCAR</button>
         </div>
     </header>
 
