--- a/login.html
+++ b/login.html
@@ -8,16 +8,15 @@
 <body>
 
     <header>
-        <div class="nav-topo">
-            <img src="/assets/facebook_5968764.png" alt="Icone Facebook">
-            <img src="/assets/whatsapp_733585 (1).png" alt="Icone Whatsapp">
-        </div>
-        
         <div class="nav-bar">
             <div class="nav-item"><a href="Menu"><button>MENU</button></a></div>
             <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
-            <div class="nav-item"><a href="paginapesquisa.html"><button >PESQUISA</button></a></div>
+            <button >LOGIN</button>
         </div>
+        
+        <div class="pesquisa">
+            <input type="text" placeholder="Pesquisar" >
+            <button>BUSCAR</button>
     </header>
 
     <main>
