--- a/paginapesquisa.html
+++ b/paginapesquisa.html
@@ -7,24 +7,15 @@
 </head>
 <body>
     <header>
-        <div class="nav-topo">
-            <img src="/assets/facebook_5968764.png" alt="Icone Facebook">
-            <img src="/assets/whatsapp_733585 (1).png" alt="Icone Whatsapp">
+        <div class="nav-bar">
+            <div class="nav-item"><a href="Menu"><button>MENU</button></a></div>
+            <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
+            <button >LOGIN</button>
         </div>
         
-        <div class="nav-bar">
-            <div class="nav-item"><a href="Menu"><button >MENU</button></a></div>
-            <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
-            <a href="paginaDoUsuário.html"><img src="/assets/username" alt="Usuario"></a>
-
+        <div class="pesquisa">
             <input type="text" placeholder="Pesquisar" >
-            <button >LOGIN</button>
-
-            <form class="search-nav">
-                <input type="text" id="search-nav" placeholder="TACACÁ">
-                <a href="#"><img src class="search-icon" src="" alt=""></a>
-            </form>
-        </div>
+            <button>BUSCAR</button>
     </header>
 
     <main>
