--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="nav-bar">
             <div class="nav-item"><a href="Menu"><button>MENU</button></a></div>
             <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
+            <div class="nav-item"><a href="sobreNos.html">SOBRE NÓS</a></div>
             <button >LOGIN</button>
         </div>
         
