--- a/login.html
+++ b/login.html
@@ -12,12 +12,13 @@
             <div class="nav-item"><a href="Menu"><button>MENU</button></a></div>
             <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
             <div class="nav-item"><a href="sobreNos.html">SOBRE NÓS</a></div>
-            <button >LOGIN</button>
+            <div class="nav-item"><a href="login.html"><button>LOGIN</button></a></div>
         </div>
         
         <div class="pesquisa">
             <input type="text" placeholder="Pesquisar" >
             <button>BUSCAR</button>
+        </div>
     </header>
 
     <main>
