--- a/paginaDoUsuário.html
+++ b/paginaDoUsuário.html
@@ -10,7 +10,8 @@
         <div class="nav-bar">
             <div class="nav-item"><a href="Menu"><button>MENU</button></a></div>
             <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
-            <button >LOGIN</button>
+            <div class="nav-item"><a href="sobreNos.html">SOBRE NÓS</a></div>
+            <div class="nav-item"><a href="login.html"><button>LOGIN</button></a></div>
         </div>
         
         <div class="pesquisa">
