--- a/paginapesquisa.html
+++ b/paginapesquisa.html
@@ -6,17 +6,17 @@
     <title>Pagina de Pesquisa</title>
 </head>
 <body>
-    <header>
-        <div class="nav-bar">
-            <div class="nav-item"><a href="Menu"><button>MENU</button></a></div>
-            <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
-            <div class="nav-item"><a href="sobreNos.html">SOBRE NÓS</a></div>
-            <button >LOGIN</button>
-        </div>
-        
-        <div class="pesquisa">
-            <input type="text" placeholder="Pesquisar" >
-            <button>BUSCAR</button>
+    <div class="nav-bar">
+        <div class="nav-item"><a href="Menu"><button>MENU</button></a></div>
+        <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
+        <div class="nav-item"><a href="sobreNos.html">SOBRE NÓS</a></div>
+        <div class="nav-item"><a href="login.html"><button>LOGIN</button></a></div>
+    </div>
+    
+    <div class="pesquisa">
+        <input type="text" placeholder="Tacacá" >
+        <button>BUSCAR</button>
+    </div>
     </header>
 
     <main>
