--- a/login.html
+++ b/login.html
@@ -6,12 +6,11 @@
     <title>Login/Registro</title>
 </head>
 <body>
-
     <header>
         <div class="nav-bar">
             <div class="nav-item"><a href="Menu"><button>MENU</button></a></div>
             <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
-            <div class="nav-item"><a href="sobreNos.html">SOBRE NÓS</a></div>
+            <div class="nav-item"><a href="sobreNos.html"><button>SOBRE NÓS</button></a></div>
             <div class="nav-item"><a href="login.html"><button>LOGIN</button></a></div>
         </div>
         
