--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <div class="pesquisa">
             <input type="text" placeholder="Pesquisar" >
-            <button>BUSCAR</button>
+            <a href="paginapesquisa.html"><button>BUSCAR</button></a>
         </div>
     </header>
 
