--- a/paginaDoUsuário.html
+++ b/paginaDoUsuário.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div class="nav-bar">
-            <div class="nav-item"><a href="index.html"><button>MENU</button></a></div>
+            <div class="nav-item"><a href="#"><button>MENU</button></a></div>
             <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
             <div class="nav-item"><a href="sobreNos.html">SOBRE NÓS</a></div>
             <div class="nav-item"><a href="login.html"><button>LOGIN</button></a></div>
