Alterações que o Prof pediu

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div class="nav-bar">
-            <div class="nav-item"><a href="Menu"><button>MENU</button></a></div>
+            <div class="nav-item"><a href="#"><button>MENU</button></a></div>
             <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
             <div class="nav-item"><a href="login.html"><button>LOGIN</button></a></div>
         </div>
@@ -55,9 +55,9 @@
     <footer>
         <span>Contato</span>
         <ul>
-            <li><a href=”facebook.com/meublog”>Facebook</a></li>
-            <li><a href=”instagram.com/meublog”>Instagram</a></li>
-            <li><a href=”twitter.com/meublog”>Twitter</a></li>
+            <li><a href="facebook.com/meublog">Facebook</a></li>
+            <li><a href="instagram.com/meublog">Instagram</a></li>
+            <li><a href="twitter.com/meublog">Twitter</a></li>
         </ul>
     </footer>
 
