criacao do CSS pagina de receita

--- a/paginaDeReceita.html
+++ b/paginaDeReceita.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receita</title>
+    <link rel="stylesheet" href="stylepaginadeReceita.css" />
 </head>
 <body>
     <header>
         <div class="nav-bar">
-            <div class="nav-item"><a href="#"><button>MENU</button></a></div>
-            <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
+            <div class="nav-item"><a href="index.html"><button>MENU</button></a></div>
+            <div class="nav-item"><a href="paginaDePesquisa.html"><button>RECEITAS</button></a></div>
             <div class="nav-item"><a href="login.html"><button>LOGIN</button></a></div>
         </div>
         
         <div class="pesquisa">
             <input type="text" placeholder="Pesquisar" >
-            <a href="paginapesquisa.html"><button>BUSCAR</button></a>
+            <a href="paginaDePesquisa.html"><button>BUSCAR</button></a>
         </div>
     </header>
 
     <main>
         <section>
-            <img src="assets\tacaca.png" alt="">
+            <img src="assets\tacaca.png" alt="" >
         </section>
 
         <section>
             <div class="card">
-                <img src="assets\avatar.png" alt="user" style="border-radius: 50%; margin-right: 10px;">
+                <img src="assets\avatar.png" alt="user" style="border-radius: 50%; margin-right: 10px ;">
             </div>
             <div>
                 <strong>Cozinheiro Eduardo</strong>
