--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <header>
         <div class="nav-bar">
-            <div class="nav-item"><a href="#"><button>MENU</button></a></div>
-            <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
+            <div class="nav-item"><a href="index.html"><button>MENU</button></a></div>
+            <div class="nav-item"><a href="paginaDeReceita.html"><button>RECEITAS</button></a></div>
             <div class="nav-item"><a href="login.html"><button>LOGIN</button></a></div>
         </div>
         
