--- a/paginaDePesquisa.html
+++ b/paginaDePesquisa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="paginaDoUsuario.css" rel="stylesheet"/>
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="stylesPaginaDePesquisa.css" rel="stylesheet"/>
     <title>Pagina de Pesquisa</title>
   
 </head>
