--- a/paginaDeReceita.html
+++ b/paginaDeReceita.html
@@ -27,7 +27,7 @@
 
         <section>
             <div class="card">
-                <img src="assets\avatar.png" alt="user" style="border-radius: 50%; margin-right: 10px ;">
+                <img src="assets\avatar.png" alt="user" style="border-radius: 50%; margin-right: 40px;">
             </div>
             <div>
                 <strong>Cozinheiro Eduardo</strong>
@@ -84,9 +84,10 @@
         
         <section-bottom>
             <span>Top Receitas</span>
-            <a href="pagina_receita_eduardo.html"><img src="" alt="Receita tacaca"></a>
-            <a href=""><img src="" alt="Torta Doce"></a>
-            <a href=""><img src="" alt="Feijoada"></a>
+            <li><a href="paginaDeReceita.html"><img src="" alt="Receita tacaca"></a></li>
+            <li><a href="paginaDeReceita.html"><img src="" alt="Receita tacaca"></a></li>
+            <li><a href="paginaDeReceita.html"><img src="" alt="Receita tacaca"></a></li>
+          
         </section-bottom>
     </main>
  
