--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
     </header>
 
     <main>
+        <section>
         <form action="">
             <h1>Faça seu login</h1>
             <div>
@@ -44,22 +45,7 @@
                 Esqueceu sua senha?
             </p>
         </form>
+    </section>
 
-        <section class="top-receitas">
-            <span>Top Receitas</span>
-            <a href="pagina_receita_eduardo.html"><img src="" alt="Receita tacaca"></a>
-            <a href=""><img src="" alt="Torta Doce"></a>
-            <a href=""><img src="" alt="Feijoada"></a>
-        </section>
-    </main>
-    
-    <footer>
-        <span>Contato</span>
-        <ul>
-            <li><a href="https://facebook.com/meublog">Facebook</a></li>
-            <li><a href="https://instagram.com/meublog">Instagram</a></li>
-            <li><a href="https://twitter.com/meublog">Twitter</a></li>
-        </ul>
-    </footer>
 </body>
 </html>
