--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>        
         <ul class="nav">
-            <li><a href="pagina_receita_eduardo.html">RECEITAS</a></li>
-            <li><a href="paginaDoUsuário.html">PERFIL</a></li>
+            <li><a href="paginaDeReceita">RECEITAS</a></li>
+            <li><a href="paginaDoUsuario.html">PERFIL</a></li>
             <li><a href="login.html">LOGIN</a></li>
             
         </ul>
