--- a/paginaDeReceita.html
+++ b/paginaDeReceita.html
@@ -4,25 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receita</title>
+    <link rel="stylesheet" href="stylepaginadeReceita.css">
 </head>
 <body>
-    <header>
-        <div class="nav-bar">
-            <div class="nav-item"><a href="Menu"><button>MENU</button></a></div>
-            <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
-            <div class="nav-item"><a href="sobreNos.html"><button>SOBRE NÓS</button></a></div>
-            <div class="nav-item"><a href="login.html"><button>LOGIN</button></a></div>
-        </div>
-        
-        <div class="pesquisa">
-            <input type="text" placeholder="Pesquisar" >
-            <a href="paginapesquisa.html"><button>BUSCAR</button></a>
-        </div>
+    <header>        
+        <ul class="nav">
+            <li><a href="paginaDeReceita">RECEITAS</a></li>
+            <li><a href="paginaDoUsuario.html">PERFIL</a></li>
+            <li><a href="login.html">LOGIN</a></li>
+            
+        </ul>  
     </header>
 
     <main>
         <section>
-            <img src="assets\tacaca.png" alt="">
+            <img src="assets/tacaca2.jpg" alt="Tacaca">
         </section>
 
         <section>
