--- a/paginaDoUsuario.html
+++ b/paginaDoUsuario.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Usuário</title>
+    <link rel="stylesheet" href="paginaDoUsuario.css">
 </head>
 <body>
-    <header>
-        <div class="nav-bar">
-            <div class="nav-item"><a href="#"><button>MENU</button></a></div>
-            <div class="nav-item"><a href="pagina_receita_eduardo.html"><button>RECEITAS</button></a></div>
-            <div class="nav-item"><a href="sobreNos.html">SOBRE NÓS</a></div>
-            <div class="nav-item"><a href="login.html"><button>LOGIN</button></a></div>
-        </div>
-        
-        <div class="pesquisa">
-            <input type="text" placeholder="Pesquisar" >
-            <a href="paginapesquisa.html"><button>BUSCAR</button></a>
-        </div>
+    <header>        
+        <ul class="nav">
+            <li><a href="paginaDeReceita">RECEITAS</a></li>
+            <li><a href="paginaDoUsuario.html">PERFIL</a></li>
+            <li><a href="login.html">LOGIN</a></li>
+            
+        </ul>  
     </header>
 
     <main>
