--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
     </header>
     <main>
         <section>
-            <div class="banner">
-                
-                <div class="banner2">
-                    <img src="assets/tacaca2.jpg" alt="Tacaca2">
-                </div>
+            <h1</h1>
+            <div class="banner2">
+                <img src="assets/tacaca2.jpg" alt="Tacaca2">
+            </div>
+
+            <div class="banner"></div>
+                <img src="assets/ACARAJPE.png" alt="">
+
             </div>
         </section>
+
         <section-bottom>
             <span>Top Receitas</span>
             <a href="pagina_receita_eduardo.html"><img src="" alt="Receita tacaca"></a>
