--- a/login.html
+++ b/login.html
@@ -17,6 +17,15 @@
     </header>
 
     <main>
+        <section>
+            <h1></h1>
+            
+            <div class="banner2">
+                <img src="assets/tacaca2.jpg" alt="Tacaca2">
+            </div>
+            
+        </section>
+
         <form action="">
             <h1>Faça seu login</h1>
             <div>
