--- a/index.html
+++ b/index.html
@@ -31,16 +31,18 @@
         </section>
 
         <section-bottom>
-            <span>Top Receitas</span>
-            <a href="pagina_receita_eduardo.html"><img src="" alt="Receita tacaca"></a>
-            <a href=""><img src="" alt="Torta Doce"></a>
-            <a href=""><img src="" alt="Feijoada"></a>
+            <div id="section-bottom">
+                <h3>Top Receitas</h3>
+                <img src="/assets/acaraje3.png" alt="" id="img-bottom">
+                <img src="/assets/torta3.png" alt="" id="img-bottom">
+                <img src="/assets/feijoada3.jpg" alt="" id="img-bottom">
+            </div>
         </section>
 
     </main>
 
     <footer>
-    <span>Contato</span>
+    
     <ul>
         <a href="facebook.com/meublog">Facebook</a>
         <a href="instagram.com/meublog">Instagram</a>
