--- a/paginaDeReceita.html
+++ b/paginaDeReceita.html
@@ -23,8 +23,8 @@
 
         <section>
             <div class="card">
-                <img src="assets\avatar.png" alt="user" style="border-radius: 50%; margin-right: 10px;">
-            </div>
+                <img src="assets\avatar.png" alt="user" style="border-radius: 50%; margin-right: 10p">
+            </div>x;
             <div>
                 <strong>Cozinheiro Eduardo</strong>
                 <blockquote>Especialista em Comida regionalista</blockquote>
