--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>        
         <ul class="nav">
-            <li><a href="paginaDeReceita">RECEITAS</a></li>
+            <li><a href="paginaDeReceita.html">RECEITAS</a></li>
             <li><a href="paginaDoUsuario.html">PERFIL</a></li>
             <li><a href="login.html">LOGIN</a></li>
             
