--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                 <h3>Top Receitas</h3>
 
                 <div class="img1">
-                    <a href="paginaDeReceita.html"><img src="assets/acaraje3.png" alt="Acarajé"></a>
-                    <span>Acarajé</span>             
+                    <a href="paginaDeReceita.html"><img src="assets/acaraje3.png" alt="Acarajé">Acarajé</a>
+               
                 </div>
 
                 <div class="img2">
-                    <a href="paginaDeReceita.html"><img src="assets/tacaca3.png" alt="Tacacá"></a>
+                    <a href="paginaDeReceita.html"><img src="assets/tacaca3.png" alt="Tacacá">Tacacá</a>
                 </div>
                 
                 <div class="img3">
-                    <a href="paginaDeReceita.html"><img src="assets/feijoada3.jpg" alt="Feijoada"></a>
+                    <a href="paginaDeReceita.html"><img src="assets/feijoada3.jpg" alt="Feijoada">Feijoada</a>
                 </div>
 
             </div>               
@@ -56,10 +56,7 @@
     </main>
 
     <footer>
-        <ul>
-            <a href="facebook.com/meublog">Facebook</a>
-            <a href="instagram.com/meublog">Instagram</a>
-        </ul>
+        Copyright 2024 © - Site Receitas™ 
     </footer>
 </body>
 </html>
