--- a/login.html
+++ b/login.html
@@ -59,12 +59,7 @@
     </main>
     
     <footer>
-        <span>Contato</span>
-        <ul>
-            <li><a href=”facebook.com/meublog”>Facebook</a></li>
-            <li><a href=”instagram.com/meublog”>Instagram</a></li>
-            <li><a href=”twitter.com/meublog”>Twitter</a></li>
-        </ul>
+        Copyright 2024 © - Site Receitas™ 
     </footer>
 
 </body>
