--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
     </header>
     <main>
         <section>
-            <h1></h1>
+            <h1>Bem vindo ao Site de Receitas!</h1>
+
+            <div id="texto">
+                <p>Aqui você vai encontrar receitas regionais brasileiras</p>
+
+                <p>Compartilhe e troque ideias sobre suas receitas favoritas de sua região!</p>
+
+            </div>
+            
             
             <div class="banner2">
                 <a href="paginaDeReceita.html"><img src="assets/tacaca2.jpg" alt=""></a></a>
