--- a/paginaDePesquisa.html
+++ b/paginaDePesquisa.html
@@ -24,10 +24,9 @@
     <div class="pesquisa-recentes">
         <h2 class="texto-pesquisa">Pesquisa Recente</h2>
         <div class="contener-pesquisa">
-            <a href="pagina_receita_eduardo.html"><img src="../Proz-main/assets/tacaca3.png" class="imagens-pesquisa-recente" alt="Imagem-Tacaca"></a>
+            <a href="paginaDeReceita.html"><img src="../Proz-main/assets/tacaca3.png" class="imagens-pesquisa-recente" alt="Imagem-Tacaca"></a>
             <div class="texto-container">
                 <h3 class="texto-tacaca">Tacacá</h3>
-                <p>Eduardo cozinheiro ensina como fazer tacacá, prato típico da região Amazônica.</p>
             </div>
         </div>
     </div>
@@ -39,10 +38,8 @@
 
     <div class="texto-receita-populares">
         <h2 class="texto-populares">RECEITAS POPULARES</h2>
-        <p>Confira as receitas queridinhas dos nossos consumidores e aproveite para surpreender sua família com uma deliciosa produção!</p>
     </div>
     
-
     <div class="container-receitas-populares">
         <img src="../Proz-main/assets/torta3.png" class="imagem-receitas-populares" alt="Imagem-Torta">
         <div class="texto-container-receitas-populares">
@@ -50,7 +47,7 @@
             <p>Uma torta doce deixa qualquer ocasião mais especial, desde<br> o café da manhã e o lanche da tarde até o aniversário e as festas de família</p>
         </div>
     </div>
-    <hr style=" width: 100%; border: 0.2px solid rgb(180, 179, 179);">
+    <hr class="linha-hr">
     <div class="container-receitas-populares">
         <img src="../Proz-main/assets/acaraje3.png" class="imagem-receitas-populares" alt="Imagem-Torta">
         <div class="texto-container-receitas-populares">
@@ -58,7 +55,7 @@
             <p>Você sabia que a palavra acarajé se origina da língua africana<br> iorubá? Nessa designação, 'akará' quer dizer “bola de fogo” e 'jé' significa “comer”.</p>
         </div>
     </div>
-    <hr style=" width: 100%; border: 0.2px solid rgb(180, 179, 179);">
+    <hr class="linha-hr">
     <div class="container-receitas-populares">
         <img src="../Proz-main/assets/Feijoada3.png" class="imagem-receitas-populares" alt="Imagem-Torta">
         <div class="texto-container-receitas-populares">
