--- a/paginaDoUsuario.html
+++ b/paginaDoUsuario.html
@@ -99,11 +99,9 @@
     </main>
     
     <footer>
-        <span>Contato</span>
-        <ul>
-            <a href="facebook.com/meublog">Facebook</a>
-           <a href="instagram.com/meublog">Instagram</a>
-        </ul>
+        <footer>
+            Copyright 2024 © - Site Receitas™ 
+        </footer>
     </footer>
 
 </body>
