--- a/paginaDePesquisa.html
+++ b/paginaDePesquisa.html
@@ -47,7 +47,7 @@
     </div>
     <hr class="linha-hr">
     <div class="container-receitas-populares">
-        <img src="/assets/acaraje3.png" class="imagem-receitas-populares" alt="Imagem-Torta">
+        <img src="/assets/acaraje3.png" class="imagem-receitas-populares" alt="Imagem-acaraje">
         <div class="texto-container-receitas-populares">
             <h3>Mini acajare na airfyer</h3>
             <p>Você sabia que a palavra acarajé se origina da língua africana<br> iorubá? Nessa designação, 'akará' quer dizer “bola de fogo” e 'jé' significa “comer”.</p>
@@ -55,7 +55,7 @@
     </div>
     <hr class="linha-hr">
     <div class="container-receitas-populares">
-        <img src="assets/feijoada3.jpg" class="imagem-receitas-populares" alt="Imagem-Torta">
+        <img src="assets/feijoada3.jpg" class="imagem-receitas-populares" alt="Imagem-feijoada">
         <div class="texto-container-receitas-populares">
             <h3>Feijoada tradicional</h3>
             <p>Um clássico da nossa culinária, a feijoada é um prato que possui algumas<br> variações, mas todas bem deliciosas! Esta receita de feijoada que trazemos pra você <br>é bem tradicional, contendo carnes como orelha, rabo e pé de porco.<br>Confira como fazer e capriche no seu almoço!</p>
