--- a/paginaDeReceita.html
+++ b/paginaDeReceita.html
@@ -23,7 +23,7 @@
 
         <section>
             <div class="card">
-                <img src="assets\avatar.png" alt="user" style="border-radius: 50%; margin-right: 10p">
+                <img src="assets\avatar.png" alt="user" style="border-radius: 50%; margin-right: 20p; display: block;">
             </div>x;
             <div>
                 <strong>Cozinheiro Eduardo</strong>
