--- a/paginaDeReceita.html
+++ b/paginaDeReceita.html
@@ -24,7 +24,7 @@
         <section>
             <div class="card">
                 <img src="assets\avatar.png" alt="user" style="border-radius: 50%; margin-right: 20p; display: block;">
-            </div>x;
+            </div>
             <div>
                 <strong>Cozinheiro Eduardo</strong>
                 <blockquote>Especialista em Comida regionalista</blockquote>
