--- a/paginaDoUsuario.html
+++ b/paginaDoUsuario.html
@@ -23,7 +23,7 @@
     <main>
         <section class="capa">
             <div class="imagemfundo">
-                <img src="c:\Users\Pichau\Pictures\fundo-receitas.jpg" alt="imagemfundo">
+                <img src="assets/R2" alt="imagemfundo">
             </div>
             <div class="icone-usuario">
                 <img src="https://via.placeholder.com/100" alt="Avatar">
