Inicio JS página Index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site de Receitas</title>
     <link rel="stylesheet" href="stylesLoginIndex.css">
+    <script src="scriptIndex.js" defer></script>
 
 </head>
 <body>
